ubiquity (1.1.1) UNRELEASED; urgency=low

  * Use 'replace' Unicode error handling when dealing with data coming from
    debconf (closes: Malone #44595, #48732).
  * Fix ubiquity/install/apt_error_install and
    ubiquity/install/apt_error_remove templates to be of type 'error'
    (closes: Malone #53258).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 18 Jul 2006 11:43:48 +0100

ubiquity (1.1.0) edgy; urgency=low

  * Use try/finally in install.py to ensure that PROGRESS STOP is always
    called; ignore errors from PROGRESS STOP (e.g. because debconf has gone
    away due to a previous error).
  * Support /UNIONFS (Knoppix) as well as /rofs as the read-only filesystem
    source.
  * Don't require entering a full name (see
    http://www.hermann-uwe.de/blog/os-install-experiences-part-4-ubuntu).
  * GTK frontend:
    - Return None from location_from_point if point is None (thanks to Chris
      Moore for the idea; closes: Malone #48885).
  * KDE frontend:
    - Add slightly more paranoia in case getNearestCity returns None.
  * Don't show hw-detect/modprobe_error, and make it non-fatal (closes:
    Malone #48524).
  * Make it clear in the crash dialog that you should file a new bug, not
    attach your details to an existing bug.
  * Add passwd and adduser dependencies from user-setup.
  * Take a copy of the supplied choice map in set_keyboard_choices.
  * Save tracebacks from install.py and slurp them back into the traceback
    displayed if install.py exits non-zero.
  * Convert to new Python policy (python-central). Install Python
    modules/extensions to /usr/lib/ubiquity/ubiquity rather than into the
    public module path.
  * Warn in the partitioner if you try to use XFS for /boot (closes: Malone
    #47848).
  * Warn in the partitioner if system filesystems are not reformatted
    (closes: Malone #47046).
  * Remove /usr/bin/espresso compatibility symlink.
  * Use os._exit() rather than sys.exit() in the apt install progress child